tests/NormalTests/paczka1/small_fuzzy/94514296.err
Error in line 8: O2Rh0T2zY A761 9,5
Error in line 4: l7I9B8 S844 74,9
Error in line 14: l7I9B8 A593 14,7
